--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <section id="video">
         <div class="container">
-            <video width="100%" autoplay loop>
+            <video width="100%" autoplay loop controls>
                 <source src="media/articulosfiesta.mp4" type="video/mp4">
             </video>
         </div>
